# treetop-discovery

./: .gitignore  .tool-versions  README.md  app.py  cdk.json  config.toml.example  pyproject.toml
.github/workflows/: ci.yml  deploy-ecr.yml
functions/build_function/: README.md
iiif/: Dockerfile  README.md  deploy.sh  manifest_fetcher.py  pyproject.toml  requirements.txt
osdp/: README.md  app.py  cdk.context.json  cdk.json  config.toml.example  pyproject.toml  requirements.txt
osdp/constructs/: api_construct.py  db_construct.py  ecs_task_construct.py  knowledge_base_construct.py  step_functions_construct.py  ui_construct.py
osdp/functions/build_function/: README.md  index.js  package.json
osdp/functions/chat/: index.py
osdp/functions/ead/: index.py
osdp/functions/get_iiif_manifest/: index.py
osdp/functions/step_function_trigger/: index.py
osdp/pipeline/: osdp_application_stage.py  pipeline_stack.py
osdp/stacks/: osdp_prototype_stack.py
osdp/tests/unit/: test_api.py  test_database.py  (+2 more)
osdp_cdk/: app.py  cdk.context.json  pyproject.toml  requirements-dev.txt
osdp_cdk/iiif/: deploy.sh
osdp_cdk/osdp_cdk/: osdp_prototype_stack.py
source/: app.py  cdk.context.json
source/iiif/: Dockerfile  README.md  manifest_fetcher.py  requirements.txt
source/source/: fargate_hello_world.py  iiif_fetcher_stack.py  osdp_prototype_stack.py  osdp_step_function_task_stack.py  source_stack.py
src/treetop/: __init__.py
tests/unit/: test_api.py  test_database.py  test_knowledge_base.py  test_source_stack.py  test_status_api.py  test_status_function.py
(+23 files in other folders)
